// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormPasswordConfirm > renders with default props 1`] = `
"<div class="mb-3 row align-items-center"><label for="password" class="col-md-3 col-form-label text-md-end">Password</label>
  <div class="col-md-9 col-xl-8"><input id="password" type="password" class="form-control" name="password" placeholder="Password" value="">
    <!--v-if-->
  </div>
</div>
<div class="mb-3 row align-items-center"><label for="password_confirmation" class="col-md-3 col-form-label text-md-end">Repeat password</label>
  <div class="col-md-9 col-xl-8"><input id="password_confirmation" type="password" class="form-control" name="password_confirmation" placeholder="Password" value="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormPasswordConfirm > renders with errors 1`] = `
"<div class="mb-3 row align-items-center"><label for="password" class="col-md-3 col-form-label text-md-end">Password</label>
  <div class="col-md-9 col-xl-8"><input id="password" type="password" class="form-control is-invalid" name="password" placeholder="Password" value="">
    <div class="invalid-feedback form-text">Too short</div>
  </div>
</div>
<div class="mb-3 row align-items-center"><label for="password_confirmation" class="col-md-3 col-form-label text-md-end">Repeat password</label>
  <div class="col-md-9 col-xl-8"><input id="password_confirmation" type="password" class="form-control is-invalid" name="password_confirmation" placeholder="Password" value="">
    <div class="invalid-feedback form-text">Does not match</div>
  </div>
</div>"
`;
